--- a/extra-addons/pym_config/i18n/pym_config.pot
+++ b/extra-addons/pym_config/i18n/pym_config.pot
@@ -4,7 +4,7 @@
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: pym_contacts 1.0\n"
+"Project-Id-Version: pym_config 1.0\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-04-10 10:06-0500\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
